...
        Surface {
            IndividualSummary(
                individual = Individual(
                    firstName = FirstName("Jeff"),
                    lastName = LastName("Campbell"),
                    phone = Phone("801-555-0001"),
                    email = Email("bob@bob.com")
                )
            )
        }
    }
}

